PointerEvents for long-press: fix double firing & canceling MEs

This CL fixes two bugs related to PointerEvents and gesture long
presses:

A. We fire pointer events from touch events. Gesture long-press
handler was calling handleMousePressEvent, which caused firing
of additional pointer events for the same touch sequence. This
CL skips firing PEs from PlatformMouseEvents synthesized from
touch.

B. Canceling a pointerdown should suppress all following
MouseEvents, including those fires through touch-gestures. We
have fixed the GestureTap case before. This CL fixes the only
remaining ME case: MEs from gesture long-press.

BUG=627207,606938

Review-Url: https://codereview.chromium.org/2141993003
Cr-Commit-Position: refs/heads/master@{#406649}

Former-commit-id: 326934c3dd341e43ecaa2c05fbf7597f7c21764d